correction d'un grid column gap

--- a/css/smartphone.css
+++ b/css/smartphone.css
@@ -46,6 +46,7 @@ body {
     display: grid;
     width: 100%;
     grid-gap: 20px;
+    grid-column-gap: 0px;
     grid-template-columns: 1fr;
     grid-template-areas:
         "start"
@@ -255,7 +256,7 @@ form {
     padding-right: 20px;
 }
 #filter {
-    padding: 15px 10px 15px 20px;
+    padding: 15px 15px 15px 0px;
     font-weight: bold;
     font-family: "raleway-semibold";
 }
